Remove rotate function from pointInteger and use heading instead
Signed-off-by: NathanDissoubray <nathan.dissoubray@rte-france.com>